# slate

./: .gitattributes  .gitignore  .graphifyignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  skills-lock.json
.cargo/: audit.toml
.config/: nextest.toml
.github/: CODEOWNERS
.github/workflows/: a11y-check.yml  audit.yml  csharp-probe.yml  license-headers.yml  nightly.yml  nsc-smoke.yml  rust.yml  swift-tests.yml  windows.yml
.planning/: .continue-here.md  HANDOFF.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
apps/slate-mac/: Package.resolved  (+2 more)
crates/slate-cli/: Cargo.toml
crates/slate-cli/src/: main.rs  output.rs  progress.rs  session.rs
crates/slate-cli/src/commands/: completions.rs  history.rs  links.rs  list.rs  mod.rs  open.rs  properties.rs  query.rs  read.rs  render_template.rs  search.rs  sync_check.rs  tasks.rs  write.rs
crates/slate-cli/tests/: cli.rs  completions.rs  tasks_templates.rs  write.rs
crates/slate-core/: Cargo.toml  README.md  clippy.toml
crates/slate-core/benches/: bases_bench.rs  canvas_bench.rs  directory_page_bench.rs  graph_bench.rs  layout_bench.rs  oplog_bench.rs  scan_bench.rs  switcher_bench.rs
crates/slate-core/benches/common/: mod.rs
crates/slate-core/examples/: repro_check.rs
crates/slate-core/migrations/: 001_init.sql  002_files_ctime.sql  003_headings.sql  005_properties.sql  008_tasks.sql  009_tasks_priority_index.sql  010_tasks_sort_index.sql  011_blocks.sql  012_invalidate_headings_for_frontmatter_fix.sql  013_citations.sql  014_headings_byte_offset.sql  015_links_display_text.sql  016_dirs.sql  017_structural_ops.sql  018_invalidate_links_for_markdown_anchor_fix.sql  019_file_tags.sql  020_canvas.sql  021_bases.sql  022_saved_queries.sql  023_dashboards.sql  024_dql_file_tags.sql  025_dql_inline_fields.sql  026_reindex_typed_property_lists.sql  027_files_oplog_name.sql  028_open_marks.sql  029_oplog_events.sql  030_files_birthtime.sql  031_file_meta.sql  032_structural_batch_inflight.sql  033_directory_page_indexes.sql  034_task_checkbox_offsets.sql
crates/slate-core/proptest-regressions/: editor_spans.txt  text_buffer.txt
crates/slate-core/src/: a11y.rs  bases_db.rs  blocks.rs  blocks_db.rs  canvas_db.rs  citations.rs  citations_db.rs  code.rs  commands.rs  db.rs  diagram.rs  diff.rs  doc_buffer.rs  dql_inline_fields_db.rs  editor_spans.rs  embeds.rs  file_meta_db.rs  frontmatter.rs  graph.rs  graph_layout.rs  graph_metrics.rs  history_prefs.rs  lib.rs  line_index.rs  link_resolver.rs  link_rewrite.rs  links.rs  links_db.rs  math.rs  oplog.rs  oplog_compaction.rs  oplog_events.rs  palette.rs  properties_db.rs  reading.rs  search_db.rs  session.rs  sidebar_filter.rs  structural.rs  structural_batch.rs  (+10 more)
crates/slate-core/src/bases/: dql.rs  engine.rs  eval.rs  expr.rs  mod.rs  slate_query_fence.rs
crates/slate-core/src/canvas/: apply.rs  apply_tests.rs  mod.rs  model.rs  model_tests.rs  placement.rs  placement_tests.rs  serialize.rs  serialize_tests.rs  tests.rs
crates/slate-core/src/citations/: bibliography.rs  prefs.rs  render.rs
crates/slate-core/src/session/: directory_page.rs
crates/slate-core/src/session/tests/: bases.rs  canvas.rs  citations.rs  common.rs  composed.rs  dir_tree.rs  directory_page.rs  events.rs  file_meta.rs  files.rs  graph.rs  link_integrity.rs  links_embeds.rs  misc.rs  oplog_compaction_session.rs  oplog_history.rs  oplog_identity.rs  oplog_logging.rs  oplog_since_open.rs  oplog_temporal.rs  properties.rs  reading.rs  save.rs  scan.rs  search.rs  structural.rs  structural_batch.rs  sync.rs  tasks.rs  templates.rs
crates/slate-core/src/vault/: fs.rs  mod.rs  provider.rs
crates/slate-core/tests/: bases_dql.rs  bases_engine.rs  bases_eval.rs  bases_expr.rs  bases_obsidian_e2e.rs  bases_parse.rs  bases_serialize.rs  bases_slate_query_fence.rs  folder_notes_exec.rs  links_roundtrip.rs  root_identity.rs  sidebar_filter_exec.rs  tag_tree_exec.rs
crates/slate-core/tests/fixtures/bases/: brief_example.base  edit_adversarial.base  every_documented_key.base  quoted_unknown_keys.base  tasks_and_comments.base
crates/slate-core/tests/fixtures/bases/obsidian/: EXPECTED.md  PROVENANCE.md  expected.json  obsidian-basic.base  obsidian-formulas.base
crates/slate-core/tests/fixtures/bases/obsidian/companion-vault/Notes/: Alpha.md  Beta.md  Gamma.md
crates/slate-core/tests/fixtures/canvas/: large_2000.canvas
crates/slate-core/tests/fixtures/dql/: closure_corpus.json  field_corpus.json  function_corpus.json  functions.dql  outgoing.dql
crates/slate-core/tests/fixtures/markdown/: basic.md  code.md  embeds.md  endings_crlf.md  endings_mixed.md  math.md
crates/slate-core/tests/fixtures/oplog/: v1_two_entries.oplog  v2_annotated.oplog
crates/slate-core/tests/fixtures/parity_golden/: basic.md.json  code.md.json  editor_scale.json  embeds.md.json  endings_crlf.md.json  endings_mixed.md.json  links.json  math.md.json  search.json
crates/slate-uniffi/: Cargo.toml  README.md
crates/slate-uniffi/src/: host_logging.rs  lib.rs
crates/yana-core/: Cargo.toml  README.md
crates/yana-core/benches/: scan_bench.rs
crates/yana-core/migrations/: 004_links.sql  005_properties.sql  006_fts5.sql  007_properties_value_norm.sql
crates/yana-core/src/: db.rs  frontmatter.rs  lib.rs  link_resolver.rs  links.rs  links_db.rs  oplog.rs  properties_db.rs  search_db.rs  session.rs
crates/yana-core/src/vault/: fs.rs  mod.rs  provider.rs
crates/yana-uniffi/: Cargo.toml  README.md
crates/yana-uniffi/src/: lib.rs
demo-vault/: README.md  VO test meeting.md  library.bib  slate.json
docs/: README.md
examples/csharp-probe/shim/: Cargo.toml  build.rs
examples/csharp-probe/shim/src/: lib.rs
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: apply-license-header.py  ax-set-caret.swift  build-and-launch.sh  build-mac-app.sh  build-swift-cli.sh  check-license-headers.sh  diff-parity-artifacts.py  generate-parity-matrix.py  vo.sh
(+649 files in other folders)
