[workspace]
resolver = "3"
members = [
    "crates/slate-core",
    "crates/slate-uniffi",
    "crates/slate-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Cory Joseph <cj@startingblind.com>"]
repository = "https://github.com/coryj627/slate"
# 1.89 picks up stable `std::fs::File::lock`, which the oplog's first-
# write serializer relies on (see `oplog::append_entry`). The project
# already pins `stable` via `rust-toolchain.toml`, so this is a
# documentation bump, not a behavior change for anyone using `rustup`.
rust-version = "1.89"

[workspace.dependencies]
pulldown-cmark = { version = "0.13", default-features = false }
thiserror = "2"
uniffi = { version = "0.31", features = ["cli"] }
# Held at 0.39 rather than 0.40: rusqlite 0.40 pulls libsqlite3-sys
# 0.38.1, whose build script uses the still-unstable `cfg_select!`
# macro and fails to compile on the pinned stable toolchain. 0.39
# (libsqlite3-sys 0.37, bundled SQLite ~3.50) is the highest that
# builds today; revisit 0.40 once a newer stable stabilizes cfg_select.
rusqlite = { version = "0.39", features = ["bundled"] }
tempfile = "3"
blake3 = "1"
trash = "5"
# ropey 2.0 (beta) backs the editor's rope `TextBuffer` (`05` §7.1).
# Chosen over `crop` for its O(log n) UTF-16 code-unit metric
# (`len_utf16` / `byte_to_utf16_idx` / `utf16_to_byte_idx`) — `crop`
# speaks only bytes/lines, and AppKit's NSTextView is UTF-16-indexed, so
# the editor's offset/line conversion APIs need the UTF-16 dimension.
# 2.0 made indexing byte-native and moved every non-byte metric behind a
# cargo feature: we enable `metric_chars` (char-boundary snapping),
# `metric_utf16` (the UTF-16 dimension above), and `metric_lines_lf` —
# the last makes the **`\n`-only** line semantics explicit (passing
# `LineType::LF` per call) instead of the old `default-features = false`
# trick, matching the Swift editor's `== "\n"` counting and the rest of
# the `\n`-based backend (a CRLF file's `\r` stays line content).
ropey = { version = "2.0.0-beta.1", default-features = false, features = [
    "metric_chars",
    "metric_utf16",
    "metric_lines_lf",
] }
# similar powers the diff-on-save fine-grained op log (`05` §7.1 / #378):
# `diff_to_ops` line-diffs old-vs-new content at save time into byte-range
# Insert/Delete/Replace ops. The `text` feature gates `TextDiff` /
# `from_lines` (it's in `default`, but we pin it explicitly so a future
# `default-features = false` can't silently drop the API). The same crate
# is the substrate for the §7.3 structured-conflict diff later.
similar = { version = "3", default-features = false, features = ["text"] }
criterion = { version = "0.8", default-features = false, features = ["html_reports"] }
# proptest drives the links round-trip integration test
# (`tests/links_roundtrip.rs`). Used only in dev/test builds.
proptest = { version = "1", default-features = false, features = ["std"] }
# yaml-rust2 is the actively-maintained successor to yaml-rust; serde_yaml
# is officially deprecated as of 0.9.34. yaml-rust2 exposes the raw Yaml
# enum which is what we want for type inference (we don't deserialize
# into known shapes — we walk the parsed tree to classify leaves).
yaml-rust2 = "0.11"
# serde_json round-trips PropertyValue through value_text in the
# properties table. Used for both write (serialize) and read
# (deserialize using the row's value_kind tag to pick the variant).
# `preserve_order` serves the canvas parser/serializer (Milestone T):
# unknown JSON-Canvas fields must round-trip with their original key
# order. It swaps serde_json::Map's backing to an insertion-ordered
# IndexMap crate-wide; nothing in the tree relies on the old
# alphabetical iteration order.
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
# chrono powers `{{date}}` / `{{time}}` / `{{date:FMT}}` / `{{time:FMT}}`
# substitution in the templates engine. `default-features = false`
# drops the system-clock plumbing (`Utc::now`, `Local`) — templates
# get the timestamp from the caller (`TemplateContext::now_ms`), so
# pulling in the OS timezone database would be dead weight.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# unicode-normalization gives the file-tree API a deterministic NFC sort
# key (#459): `list_dir_children` sorts each level case-insensitively on
# `name`'s NFC form, so a decomposed (NFD) and precomposed (NFC) spelling
# of the same name land adjacent and in a stable order. Already resolved
# transitively (via `idna`); pinning it as a direct dep is cheap.
unicode-normalization = "0.1"

# --- Diagnostics facade (#507) ----------------------------------------
# `log` is the crate-wide logging facade slate-core routes its non-fatal
# diagnostics through. It is a *facade*: every `log::warn!` / `log::debug!`
# is a no-op unless a host installs a `log::Log` sink (the Mac app does so
# via `slate_uniffi::init_host_logging`; the CLI deliberately does not —
# see that crate's main.rs). Default features are fine — they only gate the
# compile-time `max_level_*` filters, none of which we set. Adopting the
# facade replaces bare `eprintln!` of vault-relative paths in library code,
# which could leak note titles into host stderr / macOS unified logging.
log = "0.4"

# --- Milestone M `slate` CLI (M-4, #535) ------------------------------
# clap parses `slate <command> <vault-path> [--format …]`; the derive
# feature drives the per-command arg structs. ctrlc installs the
# process-wide SIGINT handler that cancels the shared `CancelToken`
# (and hard-exits on a second Ctrl-C). assert_cmd + predicates drive the
# CLI integration tests (`crates/slate-cli/tests/cli.rs`) against
# tempfile fixture vaults.
clap = { version = "4", features = ["derive"] }
# clap_complete generates the shell-completion scripts for
# `slate completions <shell>` (#639) straight from the derive grammar —
# it consumes the same `clap::Command` clap already built, so the
# completions never drift from the real verb/flag surface. Tracks clap 4.
clap_complete = "4"
ctrlc = "3"
assert_cmd = "2"
predicates = "3"

[profile.dev]
# Faster incremental builds during development.
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
