[package]
name = "slate-core"
description = "Core engine for Slate, an accessibility-first knowledge workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
trash = { workspace = true }
tempfile = { workspace = true }
yaml-rust2 = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# `libc::O_NOFOLLOW` for the templates-flow symlink-escape defence
# (#132 / Codoki PR #153 Critical). Unix-only; Windows builds fall
# back to a plain `File::open` and would need an `openat2`-equivalent
# defence if/when that target lands.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "scan_bench"
harness = false
