[package]
name = "slate-core"
description = "Core engine for Slate, an accessibility-first knowledge workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
trash = { workspace = true }
tempfile = { workspace = true }
yaml-rust2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
ropey = { workspace = true }
similar = { workspace = true }
unicode-normalization = { workspace = true }
# Logging facade (#507). Non-fatal library diagnostics route through
# `log::warn!` / `log::debug!`; these are no-ops unless a host installs a
# sink. See the "Diagnostics & the logging facade" note in lib.rs for the
# privacy rule (warn-level messages must not carry vault paths / note names).
log = { workspace = true }

# --- Milestone K content pipelines (#217 / #218 / #219) ---------------
# Math: LaTeX → MathML → MathCAT speech + braille. `include-zip`
# bundles MathCAT's rule files into the binary so we don't need a
# runtime file search path. Locked picks per `05` §2.4.
pulldown-latex = "0.7"
mathcat = { version = "0.7.6-beta.4", default-features = false, features = ["include-zip"] }

# Code: tree-sitter + the 15 compiled-in grammar set per `05` §6.4.
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-md = "0.5"            # `tree-sitter-markdown` was renamed `tree-sitter-md` upstream
tree-sitter-yaml = "0.7"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-sequel = "0.3"        # Audit #248: third-party SQL grammar (maintainer: derekstride, not
                                   # the tree-sitter org). Used because `tree-sitter-sql` 0.0.2 pins
                                   # tree-sitter 0.19, incompatible with the 0.26 all other grammars use.
                                   # Monitor for abandonment; long-term, upstreaming a 0.26 update to
                                   # `tree-sitter-sql` would eliminate this dependency.
                                   # Pinned test: `sql_grammar_keyword_prefix_convention` in code.rs.
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

# Mermaid: pure-Rust SVG renderer + structured-description source.
# Disable the cli + png features (we render to SVG-only and ship via
# AppKit's SVG paths).
mermaid-rs-renderer = { version = "0.2", default-features = false }

# --- Milestone L citations + bibliography (#276 / #277) ---------------
# Hayagriva (Typst) for BibTeX / BibLaTeX parsing in #276 and CSL
# rendering in #277. `biblatex` feature pulls in the BibLaTeX parser
# we use to load .bib files. `csl-json` exposes citationberg::json
# types we read CSL-JSON sources into. Locked pick per `05` §2.4.
hayagriva = { version = "0.9", default-features = false, features = ["biblatex", "csl-json", "archive"] }

# `libc::O_NOFOLLOW` for the templates-flow symlink-escape defence
# (#132 / Codoki PR #153 Critical). Unix-only; Windows builds fall
# back to a plain `File::open` and would need an `openat2`-equivalent
# defence if/when that target lands.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "scan_bench"
harness = false

[[bench]]
name = "canvas_bench"
harness = false

[[bench]]
name = "bases_bench"
harness = false
