[package]
name = "yana-core"
description = "Core engine for YANA, an accessibility-first knowledge workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
