[package]
name = "yana-uniffi"
description = "uniffi-rs FFI bindings for yana-core (Swift, Kotlin)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "yana_uniffi"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
yana-core = { path = "../yana-core" }
uniffi = { workspace = true }
thiserror = { workspace = true }
