# Copyright (C) 2026 Cory Joseph
# SPDX-License-Identifier: AGPL-3.0-or-later
#
# W0-1 counter-candidate (#714): the hand-written C-ABI shim that
# csbindgen consumes. Deliberately NOT a workspace member — the spike is
# throwaway evidence; slate-core resolves its own workspace-inherited
# fields from the repo root regardless.

[package]
name = "slate-csabi-shim"
version = "0.0.1"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[lib]
name = "slate_csabi_shim"
crate-type = ["cdylib"]

[dependencies]
slate-core = { path = "../../../crates/slate-core" }

[build-dependencies]
csbindgen = "1.9"

[workspace]
