# Copyright (C) 2026 Cory Joseph
# SPDX-License-Identifier: AGPL-3.0-or-later
#
# W0-1 counter-candidate (#714): the hand-written C-ABI shim that
# csbindgen consumes. Deliberately NOT a workspace member — the spike is
# throwaway evidence; slate-core resolves its own workspace-inherited
# fields from the repo root regardless.
#
# Standalone workspace ⇒ standalone Cargo.lock: any change to the ROOT
# workspace's dependency graph (a new slate-core dep edge, a version
# bump) must be mirrored here by running `cargo build` in this directory
# and committing the lockfile delta, or the CI probe lane's `--locked`
# shim build fails on "cannot update the lock file".

[package]
name = "slate-csabi-shim"
version = "0.0.1"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[lib]
name = "slate_csabi_shim"
crate-type = ["cdylib"]

[dependencies]
slate-core = { path = "../../../crates/slate-core" }

[build-dependencies]
csbindgen = "1.9"

[workspace]
